[IMP] Tree: Optimize horizontal scroll bar for virtual scroll mode. & [FIX] <pro>Table: Fixed an issue where the sort icon would display incorrectly when setting combineSort and table column front sort. & [FIX] <pro>Lov: Fixed an issue where onEnterDown events failed.

--- a/components/tree/style/index.less
+++ b/components/tree/style/index.less
@@ -24,6 +24,12 @@
     }
 
     // =================== Virtual List ===================
+    &-list-holder {
+      > div:not(.@{tree-prefix-cls}-list-holder-inner) {
+        overflow: unset !important;
+      }
+    }
+
     &-list-holder-inner {
       align-items: flex-start;
     }
